--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description:
 author: Niu Zhiqiang
 language: zh-Hans
 timezone:
+avatar: /images/avatar.png
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
