--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -247,7 +247,7 @@ mathjax:
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+#baidu_analytics: a72a0f1ad901f7b7760d3b20f08c12cb
 
 # Duoshuo ShortName
 #duoshuo_shortname:
@@ -318,7 +318,7 @@ leancloud_visitors:
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 busuanzi_count:
   # count values only if the other configs are false
-  enable: false
+  enable: true
   # custom uv span for the whole site
   site_uv: true
   site_uv_header: <i class="fa fa-user"></i>
@@ -330,7 +330,7 @@ busuanzi_count:
   # custom pv span for one page only
   page_pv: true
   page_pv_header: <i class="fa fa-file-o"></i>
-  page_pv_footer:
+  page_pv_footer: 
 
 # Tencent analytics ID
 # tencent_analytics:
