--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ search:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://niuzhiqiang90.github.io
+coding_url: http://niuzhiqiang90.coding.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
