--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -339,6 +339,12 @@ busuanzi_count:
 baidu_push: false
 
 
+sitemap:
+    path: sitemap.xml
+baidusitemap:
+    path: baidusitemap.xml
+
+
 
 #! ---------------------------------------------------------------
 #! DO NOT EDIT THE FOLLOWING SETTINGS
