--- a/_config.yml
+++ b/_config.yml
@@ -77,8 +77,8 @@ theme: next
 deploy:
   type: git
   repo: 
-      github: https://github.com/niuzhiqiang90/niuzhiqiang90.github.io.git
-      coding: https://git.coding.net/niuzhiqiang90/niuzhiqiang90.coding.me.git
+      github: git@github.com:niuzhiqiang90/niuzhiqiang90.github.io.git
+      coding: git@git.coding.net:niuzhiqiang90/niuzhiqiang90.coding.me.git
   branch: master
 
       
