rename the title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Niu Zhiqiang's blog
+title: Just do IT
 subtitle:
 description:
 author: Niu Zhiqiang
